z-index fix

--- a/css/main.css
+++ b/css/main.css
@@ -261,7 +261,7 @@ div#float-buttons {
     display: flex;
     flex-direction: column;
     user-select: none;
-    z-index: 2;
+    z-index: 5;
 }
 
 a.button {
